<resources>
    <string name="app_name">Empresas</string>
    <string name="intro">Busque informações de empresas ao redor do mundo.</string>
    <string name="enterprise_type">Tipo</string>
    <string name="enterprise_country">Localidade</string>
    <string name="welcome">Bem-vindo ao empresas</string>
    <string name="description_logo">Logo da empresa</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
