<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41.7dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_home" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/charcoal_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"/>

    <TextView
        android:id="@+id/textIntroducao"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/intro"
        android:textColor="@color/charcoal_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textWelcome"
        app:layout_constraintStart_toStartOf="@+id/textWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/textIntroducao"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/textIntroducao"
        app:layout_constraintTop_toBottomOf="@+id/textIntroducao" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cadeado"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/greeny_blue"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>


